--- a/index.html
+++ b/index.html
@@ -62,6 +62,65 @@
         <use href="#colLine" x="800" />
         <use href="#colLine" x="900" />
       </g>
+      <!-- Prototype ropes -->
+      <g>
+        <line
+          x1="540"
+          y1="200"
+          x2="540"
+          y2="300"
+          stroke="black"
+          stroke-width="2"
+        />
+        <line
+          x1="560"
+          y1="200"
+          x2="560"
+          y2="300"
+          stroke="black"
+          stroke-width="2"
+        />
+        <path
+          d="M 540 300 a 60 60 0 0 0 60 60"
+          stroke="black"
+          stroke-width="2"
+          fill="none"
+        />
+        <path
+          d="M 560 300 a 40 40 0 0 0 40 40"
+          stroke="black"
+          stroke-width="2"
+          fill="none"
+        />
+        <path
+          d="M 600 360 a 40 40 0 0 1 40 40"
+          stroke="black"
+          stroke-width="2"
+          fill="none"
+        />
+        <path
+          d="M 600 340 a 60 60 0 0 1 60 60"
+          stroke="black"
+          stroke-width="2"
+          fill="none"
+        />
+        <line
+          x1="640"
+          y1="400"
+          x2="640"
+          y2="500"
+          stroke="black"
+          stroke-width="2"
+        />
+        <line
+          x1="660"
+          y1="400"
+          x2="660"
+          y2="500"
+          stroke="black"
+          stroke-width="2"
+        />
+      </g>
     </svg>
   </body>
 </html>
