--- a/index.html
+++ b/index.html
@@ -81,25 +81,25 @@
           stroke-width="2"
         />
         <path
-          d="M 540 300 a 60 60 0 0 0 60 60"
+          d="M 540 300 q 0 20 60 60"
           stroke="black"
           stroke-width="2"
           fill="none"
         />
         <path
-          d="M 560 300 a 40 40 0 0 0 40 40"
+          d="M 560 300 q 0 20 40 40"
           stroke="black"
           stroke-width="2"
           fill="none"
         />
         <path
-          d="M 600 360 a 40 40 0 0 1 40 40"
+          d="M 600 360 q 40 20 40 40"
           stroke="black"
           stroke-width="2"
           fill="none"
         />
         <path
-          d="M 600 340 a 60 60 0 0 1 60 60"
+          d="M 600 340 q 60 20 60 60"
           stroke="black"
           stroke-width="2"
           fill="none"
@@ -119,6 +119,65 @@
           y2="500"
           stroke="black"
           stroke-width="2"
+        />
+      </g>
+      <!-- Prototype v2 -->
+      <g>
+        <line
+          x1="450"
+          y1="300"
+          x2="450"
+          y2="400"
+          stroke="black"
+          stroke-width="20"
+        />
+        <path
+          d="M 450 400 q 0 30 50 50"
+          stroke="black"
+          stroke-width="20"
+          fill="none"
+        />
+        <path
+          d="M 500 450 q 50 20 50 50"
+          stroke="black"
+          stroke-width="20"
+          fill="none"
+        />
+        <line
+          x1="550"
+          y1="500"
+          x2="550"
+          y2="600"
+          stroke="black"
+          stroke-width="20"
+        />
+        <line
+          x1="450"
+          y1="300"
+          x2="450"
+          y2="400"
+          stroke="white"
+          stroke-width="10"
+        />
+        <path
+          d="M 450 400 q 0 30 50 50"
+          stroke="white"
+          stroke-width="10"
+          fill="none"
+        />
+        <path
+          d="M 500 450 q 50 20 50 50"
+          stroke="white"
+          stroke-width="10"
+          fill="none"
+        />
+        <line
+          x1="550"
+          y1="500"
+          x2="550"
+          y2="600"
+          stroke="white"
+          stroke-width="10"
         />
       </g>
     </svg>
